# sudoku

./: .gitignore  CMakeLists.txt  README.md  approach.md  hello-world.c
.run/: Debug App (Easy Puzzle).run.xml  Debug App (Evil Puzzle).run.xml  Debug App (Hard Puzzle).run.xml  Run App Slow (Easy Puzzle).run.xml  Run App Slow (Evil Puzzle).run.xml  Run App Slow (Hard Puzzle).run.xml
input/: sudoku-evil.txt  sudoku-hard.txt  sudoku.txt
src/: CMakeLists.txt  add.h  app.c  subtract.h
src/cell/: cell.c  cell.h
src/grid/: grid.c  grid.h
src/progress-event/: progress-event.c  progress-event.h
src/strategies/execute-strategies/: execute-strategies.c  execute-strategies.h
src/strategies/hidden-single/: hidden-single.c  hidden-single.h
src/strategies/naked-pair/: naked-pair.c  naked-pair.h
src/strategies/naked-single/: naked-single.c  naked-single.h
src/strategies/no-duplicates/: no-duplicates.c  no-duplicates.h
src/unit/: unit.c  unit.h
test/: CMakeLists.txt  my_test.cc  playground_test.cc  subtract_test.cc
test/helpers/: assertion-helpers.cc  assertion-helpers.cpp  assertion-helpers.h  test-helpers.c  test-helpers.h
test/strategies/: hidden-single_test.cc  naked-pair_test.cc  naked-single_test.cc  no-duplicates_test.cc
test/unit/: unit_test.cc
